test_case/rust-lang_rust/17401_56225428_1.rs

trait Foo {}
fn foo<T: Foo>() {} // error
